fix: css and gap

--- a/src/Components/Home-Page/Layout/Hero/Hero.css
+++ b/src/Components/Home-Page/Layout/Hero/Hero.css
@@ -15,7 +15,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 12px;
 }
 
 .take-survey-span a {
