--- a/src/Components/Home-Page/Layout/HowItWorks/index.css
+++ b/src/Components/Home-Page/Layout/HowItWorks/index.css
@@ -14,7 +14,7 @@
 
 .how-it-works-heading {
   color: #062758;
-  font-size: 2.25rem;
+  font-size: 1.5rem;
   font-weight: 600;
   line-height: 110%;
 }
