--- a/src/Components/Home-Page/Layout/Services/index.css
+++ b/src/Components/Home-Page/Layout/Services/index.css
@@ -8,7 +8,7 @@
 
 .services-heading {
   color: #062758;
-  font-size: 2.25rem;
+  font-size: 1.5rem;
   font-weight: 600;
   line-height: 110%;
   text-align: center;
