--- a/src/Components/Home-Page/Layout/Team/index.css
+++ b/src/Components/Home-Page/Layout/Team/index.css
@@ -11,7 +11,7 @@
   width: 95%;
   padding-bottom: 1rem;
   color: #07235b;
-  font-size: 2.25rem;
+  font-size: 1.5rem;
   font-weight: 600;
   line-height: 110%;
 }
@@ -106,7 +106,7 @@
     line-height: 143%;
   }
   .team-heading-h2 {
-    font-size: 2.25rem;
+    font-size: 1.5rem;
     font-weight: 700;
     line-height: 120%;
   }
